--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-stripe": "^1.2.4",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-stripe": "^3.0.7",
     "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
